# SoC-FPGA-Projects

./: README.md
ESP32 - IR remote/: CMakeLists.txt  README.md  http_file_ops.c  http_file_ops.h  ir_codec.c  ir_codec.h  ir_electra_encoder.c  ir_electra_encoder.h  ir_http_server.c  ir_http_server.h  main.c  server_schedule.c  server_schedule.h  uri_handlers.c  uri_handlers.h  wifi.c  wifi.h
ESP32 - IR remote/Android App/: AcControlPage.kt  AcControlViewModel.kt  MainActivity.kt  README.MD  SchedulePage.kt  ScheduleViewModel.kt
ESP32 - IR remote/Android App/network/: HttpClient.kt
ESP32 - IR remote/Android App/res/drawable/: baseline_ac_unit_48.xml  baseline_air_48.xml  baseline_delete_forever_48.xml  baseline_hdr_auto_48.xml  baseline_power_settings_new.xml  baseline_settings_remote_48.xml  baseline_shuffle_48.xml  baseline_signal_cellular_alt_1_bar_48.xml  baseline_signal_cellular_alt_2_bar_48.xml  baseline_signal_cellular_alt_48.xml  baseline_water_drop_48.xml  baseline_wb_sunny_48.xml  sharp_schedule_48.xml
ESP32 - IR remote/Android App/res/layout/: time_picker_spinner.xml
ESP32 - IR remote/Android App/res/values/: strings.xml  themes.xml
ESP32 - IR remote/Android App/ui/: Footer.kt  FooterButton.kt
ESP32 - IR remote/Android App/ui/acControl/: FanSpeedControl.kt  ModeIcon.kt  ModeIcons.kt  PlusMinusButton.kt  (+3 more)
ESP32 - IR remote/TCP server variant/: main.c
ESP32 - IR remote/cert/: README.md
ESP32 - IR remote/html/: index.html  index.js  schedule.css  schedule.html  schedule.js  script.js  settings.html  styles.css  upload.css  upload.html  upload.js
(+172 files in other folders)
